# sistema_ro

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README_PR_INSTRUCTIONS.txt  ci_push_trigger_20260423174744.txt  ci_push_trigger_20260423174755.txt  ci_push_trigger_20260423174803.txt  ci_push_trigger_20260423174809.txt  manifest_sqls.csv  package-lock.json  pyproject.toml  requirements-ci.txt  sistema_ro.code-workspace
.claude/: agent-index.md  settings.local.json
.github/: PR_CREATION_PLACEHOLDER.txt  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
agentes_sistema_ro/: 00_AGENT_ORQUESTRADOR_SISTEMA_RO.md  01_AGENT_FUNDACAO_GOVERNANCA.md  02_AGENT_EXTRACAO_BRONZE.md  03_AGENT_NORMALIZACAO_SILVER.md  04_AGENT_NUCLEO_MERCADORIAS_AGREGACAO.md  05_AGENT_CONVERSAO_UNIDADES.md  06_AGENT_ENRIQUECIMENTO_FISCAL_SEFIN.md  07_AGENT_MOVIMENTACAO_ESTOQUE.md  08_AGENT_DERIVACOES_ANALITICAS_ESTOQUE.md  09_AGENT_BACKEND_API.md  10_AGENT_FISCONFORME.md  11_AGENT_FRONTEND_OPERACIONAL.md  12_AGENT_TESTES_RECONCILIACAO.md  AGENT_BASE_SHARED.md  AGENT_BUGS.md  AGENT_EXECUCAO_PROJETO.md  INTEGRACAO_ENTRE_AGENTES.md  README.md  mcp_stitch.manifest.json  mcp_stitch.md
backend/: AGENTS.md
bronze/: AGENTS.md
ci_logs/: gh_pr_create.txt  git_push.txt
docs/: 00_manifesto_dados.md  01_plano_fases_01_a_04.checklist.md  01_plano_fases_01_a_04.md  02_plano_fases_05_a_08.checklist.md  02_plano_fases_05_a_08.md  03_plano_fases_09_a_12.checklist.md  03_plano_fases_09_a_12.md  04_plano_fases_13_a_16.md  05_frontend_operacional.checklist.md  05_frontend_operacional.md  06_runtime_api.checklist.md  06_runtime_api.md  07_runtime_exec_api.checklist.md  08_runtime_exec_v2_api.checklist.md  09_runtime_silver_api.checklist.md  11_todo_atualizado.md  12_conversao_quality_api.checklist.md  13_status_revisado_implementacao.md  14_runtime_silver_v2_api.md  15_estoque_quality_api.md  16_referencias_e_parquets_operacao.md  18_runtime_exec_v5_api.md  20_agregacao_v2_regra.md  21_sitafe_implementacao_status.md  22_agregacao_review_api.md  23_arquitetura_parquets_mdc_agregacao.md  24_plano_estabilidade_funcional.md  26_runtime_oficial_gold_v20.md  27_fisconforme_v2_trilha_oficial.md  28_mapa_superficie_oficial_transicao_legado.md  29_descomissionamento_progressivo.md  30_superficies_em_uso_agora.md  31_historico_tecnico_runtimes.md  32_plano_integrado_docs_estoques_referencias.md  33_plano_correcao_agregacao_conversao_estoque.md  34_google_stitch_mcp.md  AGENTS.md  README.md  agente_planejamento_sistema_ro.md  arquitetura_camadas_canonicas.md  (+8 more)
fisconforme/: AGENTS.md
frontend/: .eslintrc.cjs  .prettierrc  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
gold/: AGENTS.md
modelo/: modelo_notificacao_fisconforme_n_atendido.txt
parquets/: manifest_parquets.csv
pipeline/: README.md  manual_aggregation_map_store.py  manual_map_contract.py  persist_gold.py  persist_gold_v2.py  persist_gold_v4.py  persist_operational_maps.py  persist_silver.py  persist_silver_v2.py  run_cnpj.py  (+12 more)
(+1270 files in other folders)
