[project]
name = "sistema-ro"
version = "0.1.0"
description = "Plataforma fiscal orientada a mercadorias, estoque e Fisconforme"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "polars>=1.8",
  "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["sistema_ro"]
# Limit discovery to the actual package directory to avoid accidental
# inclusion of multiple top-level folders in the repo root. This
# prevents setuptools from refusing builds in a flat layout.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["frontend/**", "dist/**", "node_modules/**", ".venv/**", "docs/**", ".claude/**", ".gitmerge_tmp/**"]
