[project]
name = "sistema-ro"
version = "0.1.0"
description = "Plataforma fiscal orientada a mercadorias, estoque e Fisconforme"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "polars>=1.8",
  "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sistema_ro*"]
# Search from the repository root and include only packages starting
# with "sistema_ro". This avoids pulling unrelated top-level folders
# while ensuring the package is discovered consistently in CI and
# local editable builds.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["frontend/**", "dist/**", "node_modules/**", ".venv/**", "docs/**", ".claude/**", ".gitmerge_tmp/**"]
