[project]
name = "sistema-ro"
version = "0.1.0"
description = "Plataforma fiscal orientada a mercadorias, estoque e Fisconforme"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "polars>=1.8",
  "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sistema_ro*"]
# Limit discovery to the repository root and include only the package
# tree matching `sistema_ro*` to avoid accidental inclusion of unrelated
# top-level folders while allowing setuptools to find the `sistema_ro`
# package when building from a project layout where the package dir
# lives at the repo root.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["frontend/**", "dist/**", "node_modules/**", ".venv/**", "docs/**", ".claude/**", ".gitmerge_tmp/**"]
